# COIN-web

./: .dockerignore  .env.local  .gitignore  CHECKLIST.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  FEATURES_IMPLEMENTATION.md  FIXES_APPLIED.md  INDEX.md  INSTALL_DEPENDENCIES.md  INTEGRATION_GUIDE.md  LAUNCH_CHECKLIST.md  PRODUCT_SUMMARY.md  PROJECT_STATUS.txt  QUICK_REFERENCE.md  README_INTEGRATION.md  SETUP.md  SETUP_BACKEND.md  START_HERE.md  analysis.md  build_output.txt  build_output_2.txt  build_output_3.txt  docker-compose.yml  lint_output.txt  next.config.js  output.css  package-lock.json  package.json  setup.sh  start-dev.sh  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts  template.tsx
app/about/: page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
app/demo/: page.tsx
app/error/: page.tsx
app/hackathons/: page.tsx
app/help/: page.tsx
app/terms/: page.tsx
backend/: .dockerignore  .env.example  .gitignore  ADMIN_OPERATIONS_GUIDE.md  API_REFERENCE.md  Cargo.toml  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md
backend/migrations/: 001_initial_schema.sql  002_add_students_table.sql  003_add_slug_to_hackathons.sql
backend/src/: auth.rs  db.rs  error.rs  export.rs  main.rs  middleware.rs  models.rs  utils.rs
backend/src/handlers/: admin.rs  metrics.rs  mod.rs  public.rs  student.rs
components/: AdminLayout.tsx  Footer.tsx  Header.tsx  Mission.tsx  mode-toggle.tsx
lib/: api.ts  types.ts  utils.ts
(+38 files in other folders)
