[package]
name = "coin-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
regex = "1"
lazy_static = "1.4"
csv = "1"
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
rust_xlsxwriter = "0.93.0"

[[bin]]
name = "coin-backend"
path = "src/main.rs"
